# tock

./: Cargo.toml  todo
arch/cortex-m/src/: lib.rs
arch/cortex-m33/: Cargo.toml
arch/cortex-m33/src/: lib.rs  mpu.rs  sau.rs
boards/: README.md
boards/nordic/nrf5340dk/: README.md
boards/nordic/nrf5340dk/application_core/: Makefile  chip_layout.ld
boards/nordic/nrf5340dk/application_core/nonsecure/: Cargo.toml  Makefile  build.rs  kernel_layout.ld  layout.ld
boards/nordic/nrf5340dk/application_core/secure/: Cargo.toml  Makefile  kernel_layout.ld  trustzone.md
boards/nordic/nrf5340dk/jtag/: gdbinit_pca10040-app.jlink  gdbinit_pca10040-net.jlink  jdbserver_pca10040.sh
boards/nordic/nrf5340dk/network_core/: Cargo.toml  Makefile  layout.ld
boards/nordic/nrf5340dk/network_core/src/: io.rs
boards/nordic/nrf5340pdk/application_core/: Cargo.toml  Makefile  chip_layout.ld  kernel_layout.ld
boards/nordic/nrf5340pdk/application_core/nonsecure/: Cargo.toml  Makefile
boards/nordic/nrf5340pdk/application_core/secure/: Cargo.toml  Makefile  kernel_layout.ld  test.syms
boards/nordic/nrf5340pdk/network_core/: Cargo.toml  Makefile  build.rs  chip_layout.ld
boards/nordic/nrf5340pdk/network_core/src/: main.rs
boards/nordic/nrf5340pdk/network_core/src/tests/: blink.rs
chips/nrf53/: Cargo.toml  README.md
chips/nrf53/src/: app_peripheral_ids.rs  chip.rs  clock.rs  crt1.rs  gpio.rs  interrupt_service.rs  lib.rs  net_peripheral_ids.rs  nvmc.rs  power.rs  rtc.rs  spi.rs  spu.rs  uart.rs  usbreg.rs
chips/nrf5x/: Cargo.toml
(+18 files in other folders)
