[package]
name = "nrf5340pdk-net"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
components = { path = "../../../components" }
cortexm33 = { path = "../../../../arch/cortex-m33" }
capsules = { path = "../../../../capsules" }
kernel = { path = "../../../../kernel" }
nrf53= { path = "../../../../chips/nrf53" }
